--- a/wonders.html
+++ b/wonders.html
@@ -71,7 +71,7 @@
       },
       "petra": {
         title: "Petra",
-        description: "Petra is an archaeological city in Jordan, famous for its rock-cut architecture and water conduit system."
+        description: "Petra is an archaeological city in Jordan, famous for its rock-cut architecture and water conduit system.Petra is an ancient city carved into Jordan's sandstone cliffs, renowned as one of the New Seven Wonders of the World and a UNESCO World Heritage Site. This stunning archaeological site features impressive rock-cut architecture, intricate water conduit systems, and a rich history as the former capital of the Nabataean Kingdom. Iconic structures like the Treasury (Al-Khazneh) and the Monastery (Al-Deir) showcase the ingenuity and craftsmanship of the ancient Nabataeans, blending Greek, Roman, and Middle Eastern architectural styles. For travelers, the best time to visit Petra is from October to November or March to April, when the weather is mild and ideal for exploring this ancient wonder.
       },
       "cristo": {
         title: "Christ the Redeemer",
